2002-08-25  Miguel de Icaza  <miguel@ximian.com>

	* gtk/TextBuffer.custom: Added SetText with a single argumnet.

	* gtk/Table.custom: Added empty constructor.  GtkTables
	automatically grow.

2002-08-23  Rachel Hestilow  <hestilow@ximian.com>

	* glue/Makefile.am: Fix # terminators.

2002-08-23  Rachel Hestilow  <hestilow@ximian.com>

	* Applied patch from Robot101 for maintainer-clean, etc.
	Needed for packaging.

2002-08-20  Rachel Hestilow  <hestilow@ximian.com>

	* generator/SymbolTable.cs (Trim): Work around "void*".
	Libart has a lovely API...

2002-08-22  Mike Kestner <mkestner@speakeasy.net>

	* glib/IWrapper.cs : remove set_Handle
	* glib/Object.cs : ditto
	* glib/Opaque.cs : ditto

2002-08-22  Mike Kestner <mkestner@speakeasy.net>

	* glib/Makefile.in : rm -rf generated on make clean target
	* gnome/CanvasProxy.cs : add missing Signals hash.

2002-08-20  Rachel Hestilow  <hestilow@ximian.com>

	Ditto for generator and api.

2002-08-20  Rachel Hestilow  <hestilow@ximian.com>
	
	* parser/makefile: Rename to Makefile.in, change prefix to @prefix@.
	* configure.in: generate parser/Makefile.

2002-08-20  Rachel Hestilow  <hestilow@ximian.com>

	* makefile: Add parser to build (for install only)
	* parser/makefile: Add distclean target.

	* parser/gapi.pl: Forgot to add this.
	* api/: Replace APIs with correctly generated ones. 
	
2002-08-20  Rachel Hestilow  <hestilow@ximian.com>

	* README.generator: Added docs on using the generator.

2002-08-19  Rachel Hestilow  <hestilow@ximian.com>

	* art/Makefile.in (clean): Change to avoid bugging out on generated/CVS.
	
	* glib/ObjectManager.cs: Added. Used to be auto-generated, but
	now it can infer names, and relies on per-namespace ObjectManager
	classes to inform it of oddly-named classes.
	
	* generator/IGeneratable.cs, GenBase.cs: New "DoGenerate" property.
	* generator/*Gen.cs: Honor DoGenerate.
	* generator/CodeGenerator.cs: Support including dependency files
	which will not be generated.