@@ -1,3 +1,9 @@
+2002-08-25  Juli Mallett  <jmallett@FreeBSD.org>
+
+	* makefile: Fix recursive invocation of make(1) to use
+	the variable MAKE, to use the same utility that was
+	responsible for the invocation of the initial build.
+
 2002-08-25  Miguel de Icaza  <miguel@ximian.com>
 
 	* gtk/TextBuffer.custom: Added SetText with a single argumnet.
